--- a/public/themes/simpleboot3/public/assets/style/css/common.css
+++ b/public/themes/simpleboot3/public/assets/style/css/common.css
@@ -21,7 +21,7 @@ body{
 	padding: 0.5rem 0 1rem;
 }
 .bgg{
-	background-color: #00A096;
+	background-color: #ff5000;
 	padding: 0.5rem 0 1rem;
 }
 .bgg .inner-bigger-title .p1{
@@ -104,7 +104,7 @@ body{
 
 .header-box .nav li{
 	padding: 0 20px;
-	font-size: 0.29rem;
+	font-size: 0.28rem;
 	line-height: 80px;
 	text-align: center;
 }
@@ -186,7 +186,7 @@ body{
 	color: #333!important;
 }
 .nav-item-text .nav-item-text-list li.col a{
-	color: #00A096!important;
+	color: #ff5000!important;
 }
 .index-banner{
 	width: 100%;
@@ -215,7 +215,7 @@ body{
 	line-height: 0.7rem!important;
 }
 .nav-item-title .title-active{
-	color: #00A096;
+	color: #ff5000;
 }
 .nav-item-text .nav-item-text-list{
 	display: none;
@@ -244,166 +244,7 @@ body{
 	margin: 0 0.1rem;
 	border-radius: 2px!important;
 }
-.swiper-pagination-bullet-active{
-	background-color: #00A096!important;
-}
-.foot-top{
-	position: relative;
-	overflow: hidden;
-	margin-top: -0.69rem;
-}
-.foot-top .foot-top-img{
-	position: absolute;
-	left:8.33rem;
-	top: 0;
-}
-.foot-top .foot-top-left{
-	width: 8.33rem;
-	height: 8.7rem;
-	background-color: #00A096;
-	padding-left: 1rem;
-	float: left;
-}
-.foot-top .foot-top-left .yuyue-btn{
-	padding-top: 1.18rem;
-	padding-bottom: 0.8rem;
-}
-.foot-top .foot-top-left .yuyue-btn a{
-	display: block;
-	width: 1.78rem;
-	height: 0.81rem;
-	color: #009E96;
-	font-size: 0.26rem;
-	line-height: 0.81rem;
-	background-color: #fff;
-	border-radius: 6px;
-}
-.foot-top .foot-top-left .contact-us{
-	color: #fff;
-	font-size: 0.37rem;
-	line-height: 1rem;
-}
-.foot-top .foot-top-left .contact-text{
-	color: #fff;
-	font-size: 0.3rem;
-	line-height: 1rem;
-}
-.foot-top .foot-top-right{
-	display: flex;
-	justify-content: space-between;
-	margin-top: 1rem;
-	margin-left: 9.5rem;
-}
-.foot-top .foot-top-right .foot-top-right-title a{
-	color: #333333;
-	font-size: 0.3rem;
-	font-weight: bolder;
-	line-height: 1.2rem;
-}
-.foot-top .foot-top-right .foot-top-right-text a{
-	color: #595757;
-	font-size: 0.26rem;
-	line-height: 0.55rem;
-}
-.foot-top .foot-top-right .qrcode-img{
-	width: 1.5rem;
-	height: 1.5rem;
-	margin-top: 0.4rem;
-}
-.foot-top .foot-top-right .qrcode-text{
-	color: #999999;
-	font-size: 0.24rem;
-	line-height: 0.5rem;
-}
-.foot_d{
-	padding: 0.3rem 0;
-	background-color: #1E1E2D;
-	color: #8F8F8F;
-	font-size: 0.26rem;
-	line-height: 0.5rem;
-}
-.foot_d a{
-	color: #8F8F8F;
-	font-size: 0.26rem;
-	line-height: 0.5rem;
-}
-.foot_d a{
-	margin-left: 0.5rem;
-}
-.foot-top-moble{
-	/* background:#00A096;
-	padding: 1.61rem 0.56rem; */
-}
-.foot-top-moble .yuyue-btn a{
-	display: block;
-	width: 100%;
-	height: 1.49rem;
-	line-height: 1.49rem;
-	background-color:#009E96;
-	font-size: 0.42rem;
-	color: #fff;
-	font-weight: bold;
-	border-radius: 0.16rem;
-	margin-bottom: 0.45rem;
-}
-.youqinglianjie a{
-	display: block;
-	width: 100%;
-	height: 1.49rem;
-	line-height: 1.49rem;
-	background-color:#fff;
-	font-size: 0.42rem;
-	color: #009E96!important;
-	font-weight: bold;
-	border-radius: 0.16rem;
-	margin-bottom: 0.45rem;
-}
-.lianjie-img{
-	width: 0.53rem;
-	height: 0.53rem;
-	vertical-align: sub;
-}
-.foot-top-moble .contact-text{
-	color: #424245;
-	font-size: 0.37rem;
-	line-height:1.49rem;
-	border-bottom: solid 1px rgba(0,0,0,0.08);
-}
-.foot-top-moble .contact-text:first-child{
-	border-top: solid 1px rgba(0,0,0,0.08);
-}
-.foot-center-moble {
-	padding: 1rem 0;
-}
-.foot-center-moble .qrcode-img{
-	width: 2.92rem;
-	height: 2.92rem;
-}
-.foot-center-moble .qrcode-text{
-	color: #1D1D1F;
-	font-size: 0.37rem;
-	line-height: 1rem;
-}
-.footer .buju{
-	background: #fff;
-	padding: 0.8rem 0.4rem;
-	border-radius: 0.21rem;
-	margin-top: 1rem;
-}
-.footer .buju-title{
-	font-size: 0.48rem;
-	text-align: center;
-	margin-bottom: 0.35rem;
-}
-.footer .buju-title span{
-	color: #009E96;
-	font-size: 0.53rem;
-	padding: 0 2px;
-}
-.footer .buju .buju-name{
-	font-size: 0.34rem;
-	line-height: 0.8rem;
-}
+
 .pageLimitbox{
 	text-align: center;
 	/* margin-bottom: 60px; */
@@ -550,6 +391,85 @@ body{
 .email{
 	font-size: 18px;
 	line-height: 1.5;
+}
+.footer{
+	padding: 1.07rem 0 0.71rem;
+	background: url(../imgs/index/bottom-bg.png) center center no-repeat;
+	background-size: 100% 100%;
+	color: #FFFFFF;
+}
+.footer .foot-top{
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 1.57rem;
+}
+.footer .foot-top .foot-top-left{
+	width: 70%;
+	display: flex;
+	justify-content: space-around;
+}
+.footer .foot-top .foot-top-left .item:not(:last-child){
+	margin-right: 1.78rem;
+}
+.footer .foot-top .foot-top-left .item .title{
+	font-size: 0.28rem;
+	margin-bottom: 0.53rem;
+}
+.footer .foot-top .foot-top-left .item .text a{
+	display: inline-block;
+	color: rgba(255, 255, 255, 0.8);
+	font-size: 0.25rem;
+	margin-bottom: 0.44rem;
+}
+.footer .foot-top .foot-top-left .item .text a:not(:last-child){
+	margin-right: 0.44rem;
+}
+.footer .foot-top .foot-top-right img{
+	width: 2.85rem;
+	height: 2.85rem;
+}
+.footer .foot-center{
+	padding: 0.53rem 0;
+	border-top: solid 1px rgba(255, 255, 255, 0.1);
+	border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+}
+.footer .foot-center ul{
+	display: flex;
+	justify-content: space-between;
+	margin: 0;
+}
+.footer .foot-center ul a{
+	color: rgba(255, 255, 255, 0.8);
+	font-size: 0.25rem;
+	line-height: 0.25rem;
+}
+.footer .foot-bottom{
+	display: flex;
+	justify-content: space-between;
+}
+.footer .foot-bottom .foot-bottom-left{
+	padding-top: 0.64rem;
+}
+.footer .foot-bottom .foot-bottom-left .logo-img{
+	width: 2.14rem;
+}
+.footer .foot-bottom .foot-bottom-left .text,.footer .foot-bottom .foot-bottom-left .text a{
+	color: rgba(255, 255, 255, 0.4);
+	font-size: 0.23rem;
+	line-height: 0.28rem;
+}
+.footer .foot-bottom .foot-bottom-right{
+	padding-top: 0.89rem;
+	text-align: right;
+	color: rgba(255, 255, 255, 0.6);
+	font-size: 0.25rem;
+}
+.footer .foot-bottom .foot-bottom-right div{
+	margin-bottom: 0.35rem;
+}
+.footer .foot-bottom .foot-bottom-right img{
+	width: 0.28rem;
+	height: 0.28rem;
 }
 @media (max-width: 768px) {
 	.inner{
