--- a/public/themes/simpleboot3/public/assets/style/css/solution.css
+++ b/public/themes/simpleboot3/public/assets/style/css/solution.css
@@ -4,7 +4,7 @@
 .solution .banner{
     width: 100%;
 	height: 8.928571rem;
-    background-image: url(../img/solution/banner.png);
+    background-image: url(../imgs/solution/banner.png);
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
@@ -150,7 +150,7 @@
 	align-items: center;
 	margin-left: 1%;
 	margin-right: 1%;
-	margin-top: 20px;
+	margin-top: 0.357143rem;
 	background: #FAFAFA;
 	text-align: center;
 	border-radius: 0.089286rem;
@@ -166,4 +166,172 @@
 	font-size: 0.357143rem;
 	text-align: center;
 	font-weight: bold;
+}
+/* 我们的优势 */
+.solution .solution_advantage{
+	padding: 1.785714rem 4.375rem 1.517857rem 4.375rem;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+.solution_advantage .title{
+	color: rgba(16, 16, 16, 1);
+	font-size: 0.571429rem;
+	text-align: center;
+	font-weight: bold;
+}
+.solution_advantage .tag{
+	margin-top: 0.357143rem;
+	color: rgba(153, 153, 153, 1);
+	font-size: 0.25rem;
+	text-align: center;
+	margin-bottom: 0.714286rem;
+}
+.solution_advantage .list{
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	justify-content: space-between;
+}
+.solution_advantage .list .content{
+	height: 0.803571rem;
+	display: flex;
+	align-items: center;
+	margin-top: 20px;
+	text-align: left;
+	border-radius: 0.089286rem;
+}
+.list .content .content_left{
+	color: rgba(255, 80, 0, 1);
+	font-size: 0.857143rem;
+	font-weight: bold;
+}
+.list .content .content_right{
+	margin-left: 0.178571rem;
+	color: rgba(51, 51, 51, 1);
+	font-size: 0.285714rem;
+	text-align: left;
+}
+/* 解决方案 */
+.solution .resolve{
+	background-color: #FFFFFF;
+	padding: 2.142857rem 4.375rem 2.142857rem 4.375rem;
+	display: flex;
+	align-items: center;
+}
+.resolve_left{
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
+.resolve_left_title{
+	color: rgba(26, 26, 26, 1);
+	font-size: 0.571429rem;
+	text-align: left;
+	font-weight: bold;
+}
+.resolve_left_tag{
+	margin-top: 0.357143rem;
+	color: rgba(153, 153, 153, 1);
+	font-size: 0.25rem;
+	text-align: left;
+}
+.resolve_left button{
+	margin-top: 1.071429rem;
+	width: 3.803571rem;
+	height: 0.964286rem;
+	line-height: 0.964286rem;
+	border-radius: 0.089286rem;
+	background-color: rgba(255, 80, 0, 1);
+	text-align: center;
+	color: rgba(255, 255, 255, 1);
+	font-size: 0.25rem;
+	border: 0;
+}
+.resolve_right{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.resolve_right_item{
+	background-image: url(../imgs/solution/resolve3.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	margin-right: 0.089286rem;
+	width: 4.107143rem;
+	height: 3.214286rem;
+	border-radius: 0.089286rem;
+}
+.resolve_right_item .resolve_right_content{
+	width: 6.25rem;
+	height: 3.214286rem;
+	opacity: 0;
+	border-radius: 0.089286rem;
+	background-color: rgba(250, 250, 250, 1);
+}
+.resolve_right_item.active{
+	width: 6.25rem;
+}
+.resolve_right_item.active .resolve_right_content{
+	opacity: 0.9;
+}
+.resolve_right_item .resolve_right_content .text{
+	color: #ff5000;
+	font-size: 0.25rem;
+	text-align: center;
+	display: none;
+	line-height:3.214286rem;
+}
+.resolve_right_item.active .resolve_right_content .text{
+	display: block;
+}
+
+/* 合作客户 */
+.solution_customer{
+	background-color: #FAFAFA;
+	padding: 1.785714rem 4.375rem 1.428571rem 4.375rem;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+.solution_customer .title{
+	color: rgba(16, 16, 16, 1);
+	font-size: 0.571429rem;
+	text-align: center;
+	font-weight: bold;
+}
+.solution_customer .tag{
+	margin-top: 0.357143rem;
+	color: rgba(153, 153, 153, 1);
+	font-size: 0.25rem;
+	text-align: center;
+	margin-bottom: 0.714286rem;
+}
+.solution_customer .list{
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	justify-content: space-between;
+}
+.solution_customer .list img{
+	width: 4.107143rem;
+	height: 1.785714rem;
+}
+.solution_customer .next{
+	color: rgba(255, 80, 0, 1);
+	font-size: 0.25rem;
+	text-align: center;
+	margin-top: 1.071429rem;
+}
+.resolve_right .span{
+	width: 6.25rem;
+	height: 3.214286rem;
+	line-height: 3.214286rem;
+	opacity: 0.9;
+	border-radius: 0.089286rem;
+	background: rgba(250, 250, 250, 1);
+	color: rgba(255, 80, 0, 1);
+	font-size: 0.285714rem;
+	text-align: center;
+	display: none;
 }
